[project]
name = "projeto_clinica"
version = "0.1.0"
description = "backend pi"
authors = [
    {name = "", email = ""},
]
dependencies = ["django>=4.2.23", "djangorestframework>=3.16.0"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
